Migrate the system tests.
Migrate the system tests from the old declaration language
(XML) to the new declaration language (YAML).

Refs #113677